src/k8s/bakeoff-api-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bakeoff-api
  name: bakeoff-api-service
  namespace: bakeoff
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: bakeoff-api
