src/k8s/bakeoff-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bakeoff-db
  namespace: bakeoff
  labels:
    app: bakeoff-db
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: bakeoff-db
