src/k8s/bakeoff-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bakeoff-api-ingress
  namespace: bakeoff
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bakeoff-api-service
                port:
                  name: http
